--- a/sesion4.Rmd
+++ b/sesion4.Rmd
@@ -135,4 +135,88 @@ years
 
 
 ```
+07/03/2021
+
+sapply
+
+```{r}
+temp <- list(c(3,7,9,6,1), c(6,9,12,13,5), c(4,8,3,-1,-3), c(1,4,7,2,-2), c(5,7,9,4,2), c(-3,5,8,9,4), c(3,6,9,4,1))
+
+extremes <-function(x){
+  c(min=min(x) , max=max(x))
+}
+lapply(temp, extremes)
+sapply(temp, extremes)
+
+temp2 <-list(1,2,3,4,5)
+
+func_temp2 <-function(x){
+  x
+}
+
+lapply(temp2, func_temp2)
+sapply(temp2, func_temp2)
+
+```
+vapply
+
+```{r}
+
+basics <-function(x){
+  c(min=min(x),mean=mean(x) , max=max(x))
+}
+
+lapply(temp, basics)
+sapply(temp, basics)
+vapply(temp, basics,numeric(3))
+
+
+```
+utilidades
+
+```{r}
+
+errors <- c(1.9, -2.6, 4.0, -9.5, -3.4, 7.3)
+
+print(sum(errors))
+
+print(sum(abs(errors)))
+
+print(sum(abs(round(errors))))
+
+linkedin <- list(16, 9, 13, 5, 2, 17, 14)
+facebook <- list(17, 7, 5, 16, 8, 13, 14)
+
+li_vec<- unlist(linkedin)
+fb_vec <-unlist(facebook)
+
+social_vec <- append(li_vec,fb_vec)
+
+social_vec
+
+sort(social_vec,decreasing = TRUE)
+
+
+
+```
+
+
+expresiones reagulares
+grepl y grep
+
+```{r}
+emails <- c("john.doe@ivyleague.edu", "education@world.gov", "dalai.lama@peace.org",
+            "invalid.edu", "quant@bigdatacollege.edu", "cookie.monster@sesame.tv")
+
+grepl(pattern="edu", x=emails)
+
+grep(pattern="edu", x=emails)
+
+hits<-grep(pattern="edu", x=emails)
+
+emails[hits]
+
+
+
+```
 
