--- a/sesion5.Rmd
+++ b/sesion5.Rmd
@@ -53,4 +53,41 @@ scale_y_log10()
 
 
 ```
+Log scaling
 
+```{r}
+ggplot(gapminder_1952, aes(x=pop, y=gdpPercap)) +
+  geom_point() +
+  scale_x_log10() +
+  scale_y_log10()
+```
+Colors
+```{r}
+gapminder_1952
+ggplot(gapminder_1952, aes(x=pop, y=lifeExp, color=continent)) +
+  geom_point() +
+  scale_x_log10() +
+  scale_y_log10()
+```
+```{r}
+View(gapminder_1952)
+ggplot(gapminder_1952, aes(x=pop, y=lifeExp, color=continent, size=gdpPercap)) + 
+  geom_point() +
+  scale_x_log10()
+```
+Facetado
+```{r}
+View(gapminder_1952)
+ggplot(gapminder_1952, aes(x=pop, y=lifeExp)) + 
+  geom_point() +
+  scale_x_log10() +
+  #scale_y_log10() +
+  facet_wrap(~continent)
+```
+
+```{r}
+ggplot(gapminder, aes(x=gdpPercap, y=lifeExp)) + 
+  geom_point() +
+  scale_x_log10() +
+  facet_wrap(~year)
+```
